--- a/render.yaml
+++ b/render.yaml
@@ -1,9 +1,7 @@
 services:
   - type: web
     name: prof-warlock
-    env: python
-    buildCommand: "pip install -r requirements.txt"
-    startCommand: "uvicorn src.api.main:app --host 0.0.0.0 --port $PORT"
+    dockerfilePath: ./Dockerfile
     envVars:
       - key: ENVIRONMENT
         value: production
