Update branding from Prof. Postmark to Prof. Warlock

--- a/env.sample
+++ b/env.sample
@@ -1,4 +1,4 @@
-# Prof. Postmark Environment Sample
+# Prof. Warlock Environment Sample
 POSTMARK_API_KEY=your-postmark-server-token-here
 DOMAIN=yourdomain.com
 FROM_EMAIL=prof@yourdomain.com
