--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-# Prof. Postmark - Async Email Feedback System
+# Prof. Warlock - Natal Chart Generator via Email
 fastapi==0.104.1
 uvicorn==0.24.0
 python-multipart==0.0.6
