--- a/env.sample
+++ b/env.sample
@@ -1,6 +1,15 @@
-# Prof. Warlock Environment Sample
-POSTMARK_API_KEY=your-postmark-server-token-here
-DOMAIN=yourdomain.com
-FROM_EMAIL=prof@yourdomain.com
-# Usage: POST /webhook?token=your-secret-token
-WEBHOOK_SECRET_TOKEN=your-secure-webhook-token-here
+# Postmark API Configuration
+POSTMARK_API_KEY=your_postmark_api_key_here
+
+# Email Configuration
+FROM_EMAIL=warlock@yourdomain.com
+
+# Security
+WEBHOOK_SECRET_TOKEN=your_secure_random_token_here
+
+# Environment Settings
+ENVIRONMENT=development
+SAVE_INBOUND_EMAILS=true
+
+# Optional: Domain configuration
+DOMAIN=yourdomain.com 
