--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,9 @@ mistune==3.0.2
 Pillow==11.2.1
 numpy==2.2.6
 
+# Date and time handling
+python-dateutil==2.8.2
+
 # Testing
 pytest==7.4.3
 pytest-asyncio==0.21.1
