custom gpts api

--- a/env.sample
+++ b/env.sample
@@ -6,6 +6,7 @@ FROM_EMAIL=warlock@yourdomain.com
 
 # Security
 WEBHOOK_SECRET_TOKEN=your_secure_random_token_here
+API_KEY=your_secure_api_key_here
 
 # Environment Settings
 ENVIRONMENT=development
