--- a/env.sample
+++ b/env.sample
@@ -8,6 +8,13 @@ FROM_EMAIL=warlock@yourdomain.com
 WEBHOOK_SECRET_TOKEN=your_secure_random_token_here
 API_KEY=your_secure_api_key_here
 
+# S3
+AWS_S3_BUCKET=
+AWS_S3_PUBLIC_URL=
+AWS_S3_REGION=eu-central-1
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+
 # Environment Settings
 ENVIRONMENT=development
 SAVE_INBOUND_EMAILS=true
